--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -19,5 +19,5 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:      
-      - uses: cxc421/github-action-practice@1.0.2
+      - uses: cxc421/github-action-practice@v1.0.2
 
